# art-of-control

./: .gitignore  README.md
controllers/: CMakeLists.txt
controllers/include/: pid.h
controllers/src/: ramp.cpp
include/: ramp.h
matlab/pid/: PID.m  advances_pid.slx  motor_model.m  pid_.slx  pid_18a.slx  pid_18b.slx  pid_discrete_antiwindup.slx  pid_ramp.slx  ramp_acceleration.slx  ramp_tests.m  ramp_velocity.slx
matlab/safety_controllers/one-dof/: compliance_PLUS_energy_setup.m  compliance_adjusting_PLUS_energy_aware_controller.slx  compliance_adjusting_controller.slx  compliance_adjusting_controller_v2.slx  compliance_adjusting_controller_v3.slx  compliance_adjusting_controller_v4.slx  compliance_adjusting_setup.m  energy_aware_controller.slx  energy_aware_controller_v2.slx  energy_aware_setup.m  force_ds_test.slx  hyperbole_test.m  optim_criteria.m  plot_meshes.m  setup.m  stefano_system_v1.slx  test_profile.slx  tests.slx  tests_2.slx
matlab/safety_controllers/one-dof/iros_modeling/: FSM.asv  FSM.m  braking_memory_rapid.m  braking_memory_trapezoid.m  multi_stage_safety_aware.slx  multi_stage_safety_aware_setup.m  profile.m  stage_II_subsystem.m  test_stage_2.slx
matlab/safety_controllers/one-dof/iros_modeling/old/: CountTime.m  CpuntTime.slx  braking_ramp.m  braking_ramp_test.m  braking_ramp_trapez_test.m  clear_plot.m  clear_system.slx  energy_aware.m  energy_aware.slx  energy_aware_plot.m  energy_aware_setup.m  our.slx  our_plot.m  our_setup.m  our_v2.slx  stage_II.slx  (+3 more)
matlab/state_trasform/: adjH.m  robot.slx  robot2018b.slx
src/: main.cpp  pid.cpp
